# tessa-4d

./: .gitignore  Cargo.toml  Dockerfile.jenkins  Jenkinsfile  Makefile  coverage.sh  run-checks.sh  run-itests.sh
.gitea/workflows/: ci.yaml
itest/tessa4d-gdext/: SceneTest.gd  Tessa4D.gdextension  UnitTest.gd  icon.svg.import  project.godot  test_entrypoint.gd
itest/tessa4d-gdext/examples/: parent_transform.tscn  tesseract_rotate.tscn
itest/tessa4d-gdext/test_util/: ScreenshotCompare.gd
itest/tessa4d-gdext/tests/: tesseract_mesh.tres  test_4d_nodes.gd  test_mesh_instance_4d_render.tscn
itest/tessa4d-gdext/tests/screenshots/: .gitignore
tessa4d/: Cargo.toml
tessa4d-bevy/: Cargo.toml
tessa4d-bevy/integration/: tesseract_render.rs
tessa4d-bevy/integration/common/: mod.rs
tessa4d-bevy/src/: lib.rs  main.rs  mesh.rs  transform.rs
tessa4d-gdext/: Cargo.toml
tessa4d-gdext/src/: lib.rs  mesh.rs  transform.rs  util.rs
tessa4d/proptest-regressions/mesh/: mod.txt
tessa4d/proptest-regressions/transform/: rotor4.txt
tessa4d/src/: lib.rs  linear_algebra.rs  mesh.rs  prelude.rs  util.rs
tessa4d/src/integrations/: bevy.rs  gdext.rs  glam.rs  mod.rs
tessa4d/src/linear_algebra/: gdextension.rs  glam.rs  mod.rs  traits.rs
tessa4d/src/mesh/: mod.rs
tessa4d/src/mesh/ops/: cross_section.rs  extrude.rs  mod.rs  project.rs
tessa4d/src/transform/: gdextension.rs  glam.rs  mod.rs  rotate_scale_translate.rs  rotate_scale_translate4.rs  rotor4.rs  traits.rs
