[package]
name = "tessa4d-bevy"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tessa4d = { path = "../tessa4d", features = ["bevy"] }
bevy = { workspace = true }

[dev-dependencies]
image = {version = "*"}

[[test]]
name = "tesseract_render"
path = "integration/tesseract_render.rs"
harness = false