[package]
name = "tessa4d"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "^0.24.0", optional = true }
bevy = { version = "^0.11.0", optional = true }
godot = { git = "https://github.com/godot-rust/gdext", rev = "9de7a8eaa414af9a4351608bc02176a160f6bbc3", optional = true }
thiserror = "1.0.38"

[features]
default = ["glam"]
glam = ["dep:glam"]
bevy = ["dep:bevy", "glam"]
godot4 = ["dep:godot"]


[dev-dependencies]
proptest = "1.1.0"
