[package]
name = "tessa4d"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { workspace = true, optional = true }
bevy = { workspace = true, optional = true }
thiserror = "1.0.38"

[features]
default = ["glam"]
glam = ["dep:glam"]
bevy = ["dep:bevy"]


[dev-dependencies]
proptest = "1.1.0"
